--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+
+    <!-- Page header showing company branding and navigation links -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,7 +26,11 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Background image -->
     <div class="hero"></div>
+
+    <!-- Main content of page here -->
     <main>
         <section class="main-section">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook on table" class="float-left" />
@@ -48,6 +54,8 @@
             </p>
         </section>
     </main>
+
+    <!-- Right aside section of page -->
     <aside>
         <section class="section-aside-right">
             <h3>Lead Generation</h3>
@@ -71,6 +79,8 @@
             </p>
         </section>
     </aside>
+
+    <!-- Footer of page containing authorship & copyright information-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
